src/test/success/parenthesized_expression.egern
var a = 1 + 2 * 4;
var b = (1 + 2) * 4;
var c = 1 + (2 * 4);
var d = (((1) + ((2)) * 4) - 3) / (1 + 2);
print(a);
print(b);
print(c);
print(d);
