src/test/fail/utf8_fail.egern
var blåbærgrød = 3
print(blåbærgrød)
